--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "ajv": "^6.6.1",
     "imagemin": "^6.0.0",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "react-helmet": "^5.2.1"
   }
 }
