--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "michelf/php-markdown": "^1.8",
         "michelf/php-smartypants": "^1.8",
         "overtrue/laravel-lang": "~3.0",
-        "predis/predis": "^1.1"
+        "predis/predis": "^1.1",
+        "suin/php-rss-writer": "^1.6"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.2",
